@@ -43,6 +43,7 @@ void show_expanded_day_button_handler(GtkWidget *button, gpointer user_data);
 void show_detailes_of_current_day_button_handler(GtkWidget *button, gpointer user_data);
 void show_collapsed_day_button_handler(GtkWidget *button, gpointer user_data);
 void weather_simple_window_redraw(GtkWidget *window);
+DBusHandlerResult get_mce_signal_cb_popup(DBusConnection *conn, DBusMessage *msg, gpointer data);
 gboolean jump_panarea(gpointer user_data);
 void donation_button_handler (void);
 void click_url(GtkButton *button);
